[gd_scene load_steps=16 format=3 uid="uid://c0ul2ej7bqr3x"]

[ext_resource type="Texture2D" uid="uid://wlehjwqhb3br" path="res://Backgrounds/House.png" id="1_rg8gs"]
[ext_resource type="Script" path="res://Scripts/house.gd" id="1_wborb"]
[ext_resource type="Texture2D" uid="uid://chk0i7afmu8ua" path="res://Sprites/arrow_out.png" id="2_q7dmr"]
[ext_resource type="Texture2D" uid="uid://dk0650lh3wlih" path="res://Sprites/bag.png" id="4_s2jys"]
[ext_resource type="FontFile" uid="uid://gs5irb036wet" path="res://Font/RobotoMono-VariableFont_wght.ttf" id="5_nx81l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mqrct"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4nplb"]
texture = ExtResource("2_q7dmr")
modulate_color = Color(1, 1, 0.97, 0.905882)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cjop8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y2oq7"]
texture = ExtResource("2_q7dmr")
modulate_color = Color(1, 1, 0.992157, 0.513726)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_37otb"]

[sub_resource type="FontVariation" id="FontVariation_a343u"]
base_font = ExtResource("5_nx81l")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppb8c"]
bg_color = Color(0.93408, 0.93408, 0.93408, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0901961, 0.0901961, 0.0901961, 0.596078)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4w1eo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1msl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ld5i"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 0.305882)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="House" type="Node2D"]
script = ExtResource("1_wborb")

[node name="House" type="Sprite2D" parent="."]
texture = ExtResource("1_rg8gs")
centered = false

[node name="Bag" type="Sprite2D" parent="."]
position = Vector2(632, 406)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_s2jys")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Exit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 523.0
offset_top = 617.0
offset_right = 747.0
offset_bottom = 715.0
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mqrct")
theme_override_styles/hover = SubResource("StyleBoxTexture_4nplb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cjop8")
theme_override_styles/normal = SubResource("StyleBoxTexture_y2oq7")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 594.0
offset_top = 256.0
offset_right = 694.0
offset_bottom = 440.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_37otb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_37otb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_37otb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_37otb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_37otb")

[node name="ToPhoneNode" type="Control" parent="Control/Button"]
layout_mode = 1
anchor_left = 9.1
anchor_top = 0.777174
anchor_right = 9.1
anchor_bottom = 0.777174
offset_left = -123.0
offset_right = -123.0
focus_mode = 2

[node name="Receipt" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 439.0
offset_top = 407.0
offset_right = 607.0
offset_bottom = 559.0
rotation = -0.181514
scale = Vector2(0.07, 0.105)
pivot_offset = Vector2(206, -17)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.607843, 0.607843, 0.607843, 0.247059)
theme_override_colors/font_outline_color = Color(0.370364, 0.370364, 0.370364, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = SubResource("FontVariation_a343u")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_ppb8c")
text = "--Taco Town--
Order #1

John Preston

1234 W. Sycamore St.fghfghfghfgh"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Check_Bag" type="Button" parent="Control/Receipt"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 168.0
offset_bottom = 154.0
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_4w1eo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_r1msl")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ld5i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ld5i")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r1msl")

[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="Control/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
